// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c4:link,
.c4:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c4[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  margin: 40px 0;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=456"
          rel="noopener noreferrer"
          target="_blank"
        >
          unknown convention
           (IDCC 
          idcc-unknown
          )
        </a>
      </h6>
      <div
        class="c3"
      >
        Désolé nous n'avons pas de réponse pour cette convention collective
      </div>
      <br />
      <br />
      <button
        class="c4"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c4:link,
.c4:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c4[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  margin: 5px 0;
  list-style-type: none;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <h3
        class="c1"
      >
        Références
      </h3>
      <h4
        class="c2"
      >
        Convention collective
      </h4>
      <li
        class="c3"
      >
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference CC 1
        </a>
      </li>
      <h4
        class="c2"
      >
        Autres sources
      </h4>
      <li
        class="c3"
      >
        <a
          href="http://path/to/ref"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference externe 1
        </a>
      </li>
      <br />
      <br />
      <button
        class="c4"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <br />
      <br />
      <button
        class="c3"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c4 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c3 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c2 c3"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c4"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c4 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c3 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c2 c3"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c4"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
